2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h: Make
	  Segment::clipToSegment() public as it's useful, and const as
	  it should be.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp, Mercator/Segment.cpp: Redefine the x and y
	  reference for the terrain to be in world coords, not grid offset,
	  to simplify the arithmetic considerably.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.h: Accompany each stored mod with information
	  about its bbox at the time it was added, so we can more effectively
	  move it around.

	* Mercator/Terrain.cpp: Implement moving mods around more effectively.

2008-08-14  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.h: Accompany each stored area with information
	  about its bbox at the time it was added, so we can more effectively
	  move it around.

	* Mercator/Terrain.cpp: Implement moving areas around more
	  effectively.

2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h: Remove code that handled
	  ownership of allocated terrain mods, as Terrain now owns them.
	  Implement API for removing an individual TerrainMod. Convert
	  storage over to a set for easy removal.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Add storage for terrain
	  mods. Flesh out the API for mods and areas allowing them
	  to be modified in place, and allowing mods to be removed.

	* tests/testArea.cpp: Add test stub for removing terrain mods.

2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: Don't mess around with surface data
	  for segments which don't intersect with a modifier.

2008-08-12  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Increment the interface version as the API has
	  changed.

2008-08-12  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h: